--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -204,57 +204,57 @@ jobs:
 
           # then the rest.
           - aa: 0710
-            board: uefiarm64meta
+            board: uefi-arm64-meta
             desc: UEFI Generic ARM64 cloud image for metadata-capable clouds (AWS/GCP/OCI/OpenStack/KVM/etc), includes external kernel and initrd for kexec
             runnerLabel: can-build-arm64
             runnerLabelKernel: can-build-rootfs-only
             vars: "CLOUD_IMAGE=yes"
           - aa: 0720
-            board: uefiarm64
+            board: uefi-arm64
             desc: UEFI Generic ARM64, with -generic Ubuntu kernel, cloud image, user-data at /boot/efi (FAT)
             runnerLabel: can-build-arm64
             runnerLabelKernel: can-build-rootfs-only
             vars: "CLOUD_IMAGE=yes"
           - aa: 0730
-            board: uefiarm64
+            board: uefi-arm64
             desc: UEFI Generic ARM64, with -generic Ubuntu kernel, regular CLI
             runnerLabel: can-build-arm64
             runnerLabelKernel: can-build-rootfs-only
             vars: "CLOUD_IMAGE=no"
           - aa: 0750
-            board: uefiarm64-dual-root
+            board: uefi-arm64-dual-root
             desc: UEFI Generic ARM64 Dual Root/Rescue e2img, with -generic Ubuntu kernel, cloud image, user-data at /boot for each root
             runnerLabel: can-build-arm64
             runnerLabelKernel: can-build-rootfs-only
             vars: "CLOUD_IMAGE=yes DUAL_ROOT_OUTPUT_E2IMG_ONLY=yes"
-            buildFirst: uefiarm64-rescue-rootfs # rescue is the second root, which contains a rootfs of the first.
+            buildFirst: uefi-arm64-rescue-rootfs # rescue is the second root, which contains a rootfs of the first.
 
 
           - aa: 0810
-            board: x86uefimeta
+            board: uefi-x86-meta
             desc: UEFI Generic x86 cloud image for metadata-capable clouds (AWS/GCP/OCI/OpenStack/KVM/etc), includes external kernel and initrd for kexec
             runnerLabel: can-build-x86
             runnerLabelKernel: can-build-rootfs-only
             vars: "CLOUD_IMAGE=yes"
           - aa: 0820
-            board: x86uefi
+            board: uefi-x86
             desc: UEFI Generic x86, with -generic Ubuntu kernel, cloud image, user-data at /boot/efi (FAT)
             runnerLabel: can-build-x86
             runnerLabelKernel: can-build-rootfs-only
             vars: "CLOUD_IMAGE=yes"
           - aa: 0830
-            board: x86uefi
+            board: uefi-x86
             desc: UEFI Generic x86, with -generic Ubuntu kernel, regular CLI
             runnerLabel: can-build-x86
             runnerLabelKernel: can-build-rootfs-only
             vars: "CLOUD_IMAGE=no"
           - aa: 0850
-            board: x86uefi-dual-root
+            board: uefi-x86-dual-root
             desc: UEFI Generic x86 Dual Root/Rescue e2img, with -generic Ubuntu kernel, cloud image, user-data at /boot for each root
             runnerLabel: can-build-x86
             runnerLabelKernel: can-build-rootfs-only
             vars: "CLOUD_IMAGE=yes DUAL_ROOT_OUTPUT_E2IMG_ONLY=yes"
-            buildFirst: x86uefi-rescue-rootfs # rescue is the second root, which contains a rootfs of the first.
+            buildFirst: uefi-x86-rescue-rootfs # rescue is the second root, which contains a rootfs of the first.
 
 
     steps:
