--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -200,28 +200,28 @@ jobs:
             desc: UEFI Generic x86 cloud image, with Armbian pure mainline kernel (edge), for metadata-capable clouds (AWS/GCP/OCI/OpenStack/KVM/etc), includes external kernel and initrd for kexec
             runnerLabel: can-build-x86
             runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=yes RELEASE=edge"
+            vars: "CLOUD_IMAGE=yes BRANCH=edge"
 
           - aa: 0150
             board: uefi-x86-meta
             desc: UEFI Generic x86 cloud image, with -generic Ubuntu kernel (current), for metadata-capable clouds (AWS/GCP/OCI/OpenStack/KVM/etc), includes external kernel and initrd for kexec
             runnerLabel: can-build-x86
             runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=yes RELEASE=current"
+            vars: "CLOUD_IMAGE=yes BRANCH=current"
 
           - aa: 0200
             board: uefi-x86
             desc: UEFI Generic x86, with Armbian pure mainline kernel (edge), regular CLI
             runnerLabel: can-build-x86
             runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no ENABLE_EXTENSIONS=image-output-ovf RELEASE=edge"
+            vars: "CLOUD_IMAGE=no ENABLE_EXTENSIONS=image-output-ovf BRANCH=edge"
 
           - aa: 0250
             board: uefi-x86
             desc: UEFI Generic x86, with -generic Ubuntu kernel (current), regular CLI
             runnerLabel: can-build-x86
             runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=no ENABLE_EXTENSIONS=image-output-ovf RELEASE=current"
+            vars: "CLOUD_IMAGE=no ENABLE_EXTENSIONS=image-output-ovf BRANCH=current"
 
 
             #- aa: 0300
@@ -229,14 +229,14 @@ jobs:
             #  desc: Raspberry Pi 4B, with Armbian pure mainline kernel (edge), regular CLI
             #  runnerLabel: can-build-arm64
             #  runnerLabelKernel: can-build-kernels
-            #  vars: "CLOUD_IMAGE=no RELEASE=edge"
+            #  vars: "CLOUD_IMAGE=no BRANCH=edge"
 
             #- aa: 0350
             #  board: rpi4b
             #  desc: Raspberry Pi 4B, with Armbian pure mainline kernel (edge), cloud image, user-data at /boot/firmware (FAT)
             #  runnerLabel: can-build-arm64
             #  runnerLabelKernel: can-build-kernels
-            #  vars: "CLOUD_IMAGE=yes RELEASE=edge"
+            #  vars: "CLOUD_IMAGE=yes BRANCH=edge"
 
 
           - aa: 0400
@@ -244,14 +244,14 @@ jobs:
             desc: Raspberry Pi 4B, with Ubuntu's raspi kernel (current), regular CLI
             runnerLabel: can-build-arm64
             runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=no RELEASE=current"
+            vars: "CLOUD_IMAGE=no BRANCH=current"
 
           - aa: 0450
             board: rpi4b
             desc: Raspberry Pi 4B, using Ubuntu's raspi kernel (current), cloud image, user-data at /boot/firmware (FAT)
             runnerLabel: can-build-arm64
             runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=yes RELEASE=current"
+            vars: "CLOUD_IMAGE=yes BRANCH=current"
 
 
           - aa: 0720
@@ -259,21 +259,21 @@ jobs:
             desc: UEFI Generic ARM64, with -generic Ubuntu kernel (current), cloud image, user-data at /boot/efi (FAT)
             runnerLabel: can-build-arm64
             runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=yes RELEASE=current"
+            vars: "CLOUD_IMAGE=yes BRANCH=current"
 
           - aa: 0730
             board: uefi-arm64
             desc: UEFI Generic ARM64, with -generic Ubuntu kernel (current), regular CLI
             runnerLabel: can-build-arm64
             runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=no RELEASE=current"
+            vars: "CLOUD_IMAGE=no BRANCH=current"
 
           - aa: 0740
             board: uefi-arm64-dual-root
             desc: UEFI Generic ARM64 Dual Root/Rescue e2img, with -generic Ubuntu kernel, cloud image, user-data at /boot for each root
             runnerLabel: can-build-arm64
             runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=yes DUAL_ROOT_OUTPUT_E2IMG_ONLY=yes RELEASE=current"
+            vars: "CLOUD_IMAGE=yes DUAL_ROOT_OUTPUT_E2IMG_ONLY=yes BRANCH=current"
             buildFirst: uefi-arm64-rescue-rootfs # rescue is the second root, which contains a rootfs of the first.
 
           - aa: 0750
@@ -281,7 +281,7 @@ jobs:
             desc: UEFI Generic ARM64, with -generic Ubuntu kernel (current), cloud image for metadata-capable clouds (AWS/GCP/OCI/OpenStack/KVM/etc), includes external kernel and initrd for kexec
             runnerLabel: can-build-arm64
             runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=yes RELEASE=current"
+            vars: "CLOUD_IMAGE=yes BRANCH=current"
 
 
           #- aa: 0820
@@ -289,14 +289,14 @@ jobs:
           #  desc: UEFI Generic x86, with -generic Ubuntu kernel (current), cloud image, user-data at /boot/efi (FAT)
           #  runnerLabel: can-build-x86
           #  runnerLabelKernel: can-build-rootfs-only
-          #  vars: "CLOUD_IMAGE=yes RELEASE=current"
+          #  vars: "CLOUD_IMAGE=yes BRANCH=current"
 
           - aa: 0830
             board: uefi-x86
             desc: UEFI Generic x86, with Armbian pure mainline kernel (edge), cloud image, user-data at /boot/efi (FAT)
             runnerLabel: can-build-x86
             runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=yes RELEASE=edge"
+            vars: "CLOUD_IMAGE=yes BRANCH=edge"
 
 
           #- aa: 0940
