--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -224,19 +224,19 @@ jobs:
             vars: "CLOUD_IMAGE=no ENABLE_EXTENSIONS=image-output-ovf BRANCH=current"
 
 
-            #- aa: 0300
-            #  board: rpi4b
-            #  desc: Raspberry Pi 4B, with Armbian pure mainline kernel (edge), regular CLI
-            #  runnerLabel: can-build-arm64
-            #  runnerLabelKernel: can-build-kernels
-            #  vars: "CLOUD_IMAGE=no BRANCH=edge"
+          - aa: 0300
+            board: rpi4b
+            desc: Raspberry Pi 4B, with Armbian pure mainline kernel (edge), regular CLI
+            runnerLabel: can-build-arm64
+            runnerLabelKernel: can-build-kernels
+            vars: "CLOUD_IMAGE=no BRANCH=edge"
 
-            #- aa: 0350
-            #  board: rpi4b
-            #  desc: Raspberry Pi 4B, with Armbian pure mainline kernel (edge), cloud image, user-data at /boot/firmware (FAT)
-            #  runnerLabel: can-build-arm64
-            #  runnerLabelKernel: can-build-kernels
-            #  vars: "CLOUD_IMAGE=yes BRANCH=edge"
+          - aa: 0350
+            board: rpi4b
+            desc: Raspberry Pi 4B, with Armbian pure mainline kernel (edge), cloud image, user-data at /boot/firmware (FAT)
+            runnerLabel: can-build-arm64
+            runnerLabelKernel: can-build-kernels
+            vars: "CLOUD_IMAGE=yes BRANCH=edge"
 
 
           - aa: 0400
