--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -293,6 +293,13 @@ jobs:
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=yes BRANCH=edge"
 
+          - aa: 0900
+            board: uefi-arm64
+            desc: UEFI Generic ARM64, with -generic Ubuntu kernel (current), regular CLI
+            runnerLabel: can-build-arm64
+            runnerLabelKernel: can-build-rootfs-only
+            vars: "CLOUD_IMAGE=no BRANCH=current"
+
 
           #- aa: 0940
           #  board: oneplus5
